@@ -4,6 +4,10 @@ Changelog
 Head
 ~~~~
 
+- Made the `errors`-object subclass unicode instead of defaultdict and
+  implemented custom string representation function which concatenates
+  error messages. [malthe]
+
 0.2 (2008-10-19)
 ~~~~~~~~~~~~~~~~
 
